fitness function is finished by Andrew

--- a/.project
+++ b/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>assignment1</name>
+	<name>Smooth Curve Fitting</name>
 	<comment></comment>
 	<projects>
 	</projects>
